Build updates sent to maven build
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@4457 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/maven/jruby/pom.xml
+++ b/maven/jruby/pom.xml
@@ -107,11 +107,24 @@
                   <sysproperty key="jruby.home" value="${basedir}/../.."/>
                   <sysproperty key="jruby.base" value="${basedir}/../.."/>
                   <sysproperty key="jruby.lib" value="${basedir}/../../lib"/>
-                  <test name="org.jruby.test.MainTestSuite" unless="maven.test.skip" todir="${project.build.directory}/surefire-reports"/>
-                  <test name="org.jruby.test.ScriptTestSuite" unless="maven.test.skip" todir="${project.build.directory}/surefire-reports"/>
-                  <test name="org.jruby.test.TestUnitTestSuite" unless="maven.test.skip" todir="${project.build.directory}/surefire-reports"/>
-                  <test name="org.jvyamlb.YAMLLoadTest" unless="maven.test.skip" todir="${project.build.directory}/surefire-reports"/>
-                  <test name="org.jvyamlb.YAMLDumpTest" unless="maven.test.skip" todir="${project.build.directory}/surefire-reports"/>
+                  <test name="org.jruby.test.MainTestSuite" unless="maven.test.skip"
+                      todir="${project.build.directory}/surefire-reports"/>
+                  <test name="org.jruby.test.ScriptTestSuite" unless="maven.test.skip"
+                      todir="${project.build.directory}/surefire-reports"/>
+                  <test name="org.jruby.test.BFTSTestSuite" unless="maven.test.skip"
+                      todir="${project.build.directory}/surefire-reports" />
+                  <test name="org.jruby.test.JRubyTestSuite" unless="maven.test.skip"
+                      todir="${project.build.directory}/surefire-reports" />
+                  <test name="org.jruby.test.MRITestSuite" unless="maven.test.skip"
+                      todir="${project.build.directory}/surefire-reports" />
+                  <test name="org.jruby.test.RubiconTestSuite" unless="maven.test.skip"
+                      todir="${project.build.directory}/surefire-reports" />
+                  <test name="org.jruby.test.RubyTestTestSuite" unless="maven.test.skip"
+                      todir="${project.build.directory}/surefire-reports" />
+                  <test name="org.jvyamlb.YAMLLoadTest" unless="maven.test.skip"
+                      todir="${project.build.directory}/surefire-reports"/>
+                  <test name="org.jvyamlb.YAMLDumpTest" unless="maven.test.skip"
+                      todir="${project.build.directory}/surefire-reports"/>
                 </junit>
               </tasks>
             </configuration>
