Catch up w/ latest ASM dependency additions
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@4458 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/maven/jruby-complete/pom.xml
+++ b/maven/jruby-complete/pom.xml
@@ -45,6 +45,18 @@
       <version>3.0</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>asm</groupId>
+      <artifactId>asm-analysis</artifactId>
+      <version>3.0</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>asm</groupId>
+      <artifactId>asm-tree</artifactId>
+      <version>3.0</version>
+      <scope>provided</scope>
+    </dependency>
     <!-- TODO: replace this JNA system dependency with a real one -->
     <dependency>
       <groupId>com.sun.jna</groupId>
@@ -82,6 +94,16 @@
                 <artifactItem>
                   <groupId>asm</groupId>
                   <artifactId>asm-util</artifactId>
+                  <version>3.0</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>asm</groupId>
+                  <artifactId>asm-analysis</artifactId>
+                  <version>3.0</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>asm</groupId>
+                  <artifactId>asm-tree</artifactId>
                   <version>3.0</version>
                 </artifactItem>
                 <artifactItem>
