more maven catch-up on maintenance branch
git-svn-id: http://svn.codehaus.org/jruby/branches/jruby-1_0@4459 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/maven/jruby-complete/pom.xml
+++ b/maven/jruby-complete/pom.xml
@@ -150,7 +150,7 @@
               <tasks>
                 <taskdef name="jarjar" classname="com.tonicsystems.jarjar.JarJarTask"
                   classpath="${project.basedir}/../../lib/jarjar-0.7.jar"/>
-                <java jar="${project.build.directory}/${project.build.finalName}.jar" fork="true" maxmemory="256m" failonerror="true">
+                <java jar="${project.build.directory}/${project.build.finalName}.jar" fork="true" maxmemory="${jruby.launch.memory}" failonerror="true">
                   <sysproperty key="jruby.home" value="${project.build.outputDirectory}/META-INF/jruby.home"/>
                   <arg value="--command"/>
                   <arg value="gem"/>
@@ -214,11 +214,16 @@
                   <sysproperty key="jruby.home" value="${basedir}/../.."/>
                   <sysproperty key="jruby.base" value="${basedir}/../.."/>
                   <sysproperty key="jruby.lib" value="${basedir}/../../lib"/>
-                  <test name="org.jruby.test.MainTestSuite" unless="maven.test.skip" todir="${project.build.directory}/surefire-reports"/>
-                  <test name="org.jruby.test.ScriptTestSuite" unless="maven.test.skip" todir="${project.build.directory}/surefire-reports"/>
-                  <test name="org.jruby.test.TestUnitTestSuite" unless="maven.test.skip" todir="${project.build.directory}/surefire-reports"/>
-                  <test name="org.jvyamlb.YAMLLoadTest" unless="maven.test.skip" todir="${project.build.directory}/surefire-reports"/>
-                  <test name="org.jvyamlb.YAMLDumpTest" unless="maven.test.skip" todir="${project.build.directory}/surefire-reports"/>
+                  <test name="org.jruby.test.MainTestSuite" unless="maven.test.skip"
+                      todir="${project.build.directory}/surefire-reports"/>
+                  <test name="org.jruby.test.ScriptTestSuite" unless="maven.test.skip"
+                      todir="${project.build.directory}/surefire-reports"/>
+                  <test name="org.jruby.test.TestUnitTestSuite" unless="maven.test.skip"
+                      todir="${project.build.directory}/surefire-reports" />
+                  <test name="org.jvyamlb.YAMLLoadTest" unless="maven.test.skip"
+                      todir="${project.build.directory}/surefire-reports"/>
+                  <test name="org.jvyamlb.YAMLDumpTest" unless="maven.test.skip"
+                      todir="${project.build.directory}/surefire-reports"/>
                 </junit>
               </tasks>
             </configuration>
