Add jar-complete for 1.4 weaving
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@4473 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -161,6 +161,12 @@
     <delete file="${lib.dir}/jruby1.5.jar"/>
   </target>
 
+  <target name="jar-complete-1.4" depends="jar-complete">
+    <copy file="${lib.dir}/jruby-complete.jar" tofile="${lib.dir}/jruby-complete1.5.jar"/>
+    <retro inputjar="${lib.dir}/jruby-complete1.5.jar" outputjar="${lib.dir}/jruby-complete.jar"/>
+    <delete file="${lib.dir}/jruby-complete1.5.jar"/>
+  </target>
+
     <target name="jar-complete" depends="generate-method-classes" description="Create the 'complete' JRuby jar. Pass 'mainclass' and 'filename' to adjust.">
       <property name="mainclass" value="org.jruby.Main"/>
       <property name="filename" value="jruby-complete.jar"/>
