--- a/build.xml
+++ b/build.xml
@@ -186,6 +186,7 @@
         <zipfileset src="${lib.dir}/jline-0.9.91.jar"/>
       	<zipfileset src="${lib.dir}/backport-util-concurrent.jar"/>
         <zipfileset src="${lib.dir}/jna.jar"/>
+        <zipfileset src="${lib.dir}/retroweaver-rt-2.0.jar"/>
         <rule pattern="org.objectweb.asm.**" result="jruby.objectweb.asm.@1"/>
         <zipfileset dir="${basedir}" prefix="META-INF/jruby.home">
           <include name="bin/*"/>
