Add the ASM stuff to all places
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@4485 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -150,7 +150,7 @@
       <manifest>
         <attribute name="Built-By" value="${user.name}"/>
         <attribute name="Main-Class" value="org.jruby.Main"/>
-        <attribute name="Class-Path" value="asm-3.0.jar asm-commons-3.0.jar asm-util-3.0.jar jline-0.9.91.jar bsf.jar backport-util-concurrent.jar"/>
+        <attribute name="Class-Path" value="asm-3.0.jar asm-commons-3.0.jar asm-util-3.0.jar asm-analysis-3.0.jar asm-tree-3.0.jar jline-0.9.91.jar bsf.jar backport-util-concurrent.jar"/>
       </manifest>
     </jar>
   </target>
@@ -233,7 +233,9 @@
               <exclude name="**/xsd/**"/>
         </fileset>
           <zipfileset src="${lib.dir}/asm-3.0.jar"/>
+          <zipfileset src="${lib.dir}/asm-analysis-3.0.jar"/>
           <zipfileset src="${lib.dir}/asm-commons-3.0.jar"/>
+          <zipfileset src="${lib.dir}/asm-jar-3.0.jar"/>
           <zipfileset src="${lib.dir}/asm-util-3.0.jar"/>
           <zipfileset src="${lib.dir}/jline-0.9.91.jar"/>
       	  <zipfileset src="${lib.dir}/backport-util-concurrent.jar"/>
