Added some reflection-based tests
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@4498 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -372,6 +372,7 @@
 
   <target name="test-compiled" depends="copy-test-files,run-junit-compiled"/>
   <target name="test-interpreted" depends="copy-test-files,run-junit-interpreted"/>
+  <target name="test-reflected" depends="copy-test-files,run-junit-reflected-compiled"/>
   
   <target name="test-spec" depends="test-spec-compiled, test-spec-interpreted"/>
   
@@ -480,6 +481,44 @@ test/externals/rubinius/spec/parser"/></antcall>
     </junit>
   </target>
   
+  <target name="run-junit-reflected-interpreted" description="runs junit tests">
+    <taskdef name="junit" classname="org.apache.tools.ant.taskdefs.optional.junit.JUnitTask" classpath="${lib.dir}/junit.jar"/>
+    <junit fork="yes" haltonfailure="true" dir="${basedir}" maxmemory="256M" showoutput="true" timeout="180000">
+      <classpath>
+        <pathelement location="${jruby.instrumented.classes.dir}" />
+        <path refid="build.classpath"/>
+        <pathelement path="${java.class.path}"/>
+        <pathelement path="${lib.dir}/jruby.jar"/>
+        <pathelement location="${test.classes.dir}"/>
+        <pathelement path="${test.dir}/requireTest.jar"/>
+        <pathelement location="${test.dir}"/>
+      </classpath>
+      <sysproperty key="java.awt.headless" value="true"/>
+      <sysproperty key="jruby.base" value="${basedir}"/>
+      <sysproperty key="jruby.home" value="${basedir}"/>
+      <sysproperty key="jruby.lib" value="${lib.dir}"/>
+      <sysproperty key="jruby.jit.enabled" value="false"/>
+      <sysproperty key="jruby.relection" value="true"/>
+      <sysproperty key="emma.coverage.out.file" value="${test.results.dir}/coverage.emma" />
+      <sysproperty key="emma.coverage.out.merge" value="true" />
+      
+      <jvmarg value="-ea"/>
+
+      <formatter type="xml"/>
+      <formatter type="brief" usefile="false"/>
+
+      <test name="org.jruby.test.MainTestSuite" todir="${test.results.dir}"/>
+      <test name="org.jruby.test.ScriptTestSuite" todir="${test.results.dir}"/>
+      <test name="org.jruby.test.BFTSTestSuite" todir="${test.results.dir}" />
+      <test name="org.jruby.test.JRubyTestSuite" todir="${test.results.dir}" />
+      <test name="org.jruby.test.MRITestSuite" todir="${test.results.dir}" />
+      <test name="org.jruby.test.RubiconTestSuite" todir="${test.results.dir}" />
+      <test name="org.jruby.test.RubyTestTestSuite" todir="${test.results.dir}" />
+      <test name="org.jvyamlb.YAMLLoadTest" todir="${test.results.dir}"/>
+      <test name="org.jvyamlb.YAMLDumpTest" todir="${test.results.dir}"/>
+    </junit>
+  </target>
+  
   <target name="run-junit-compiled" description="runs junit tests">
     <taskdef name="junit" classname="org.apache.tools.ant.taskdefs.optional.junit.JUnitTask" classpath="${lib.dir}/junit.jar"/>
     <junit fork="yes" haltonfailure="true" dir="${basedir}" maxmemory="256M" showoutput="true" timeout="180000">
@@ -498,6 +537,50 @@ test/externals/rubinius/spec/parser"/></antcall>
       <sysproperty key="jruby.lib" value="${lib.dir}"/>
       <sysproperty key="jruby.jit.enabled" value="true"/>
       <sysproperty key="jruby.jit.threshold" value="0"/>
+      <sysproperty key="emma.coverage.out.file" value="${test.results.dir}/coverage.emma" />
+      <sysproperty key="emma.coverage.out.merge" value="true" />
+      
+      <jvmarg value="-ea"/>
+
+      <formatter type="xml"/>
+      <formatter type="brief" usefile="false" />
+
+      <test name="org.jruby.test.MainTestSuite" todir="${test.results.dir}"/>
+      <test name="org.jruby.test.ScriptTestSuite" todir="${test.results.dir}"/>
+      <test name="org.jruby.test.BFTSTestSuite" todir="${test.results.dir}" />
+      <test name="org.jruby.test.JRubyTestSuite" todir="${test.results.dir}" />
+      <test name="org.jruby.test.MRITestSuite" todir="${test.results.dir}" />
+      <test name="org.jruby.test.RubiconTestSuite" todir="${test.results.dir}" />
+      <test name="org.jruby.test.RubyTestTestSuite" todir="${test.results.dir}" />
+      <test name="org.jvyamlb.YAMLLoadTest" todir="${test.results.dir}"/>
+      <test name="org.jvyamlb.YAMLDumpTest" todir="${test.results.dir}"/>
+    </junit>
+
+    <junitreport todir="${test.results.dir}">
+      <fileset dir="${test.results.dir}" includes="TEST-*.xml"/>
+      <report format="frames" todir="${html.test.results.dir}"/>
+    </junitreport>
+  </target>
+  
+  <target name="run-junit-reflected-compiled" description="runs junit tests">
+    <taskdef name="junit" classname="org.apache.tools.ant.taskdefs.optional.junit.JUnitTask" classpath="${lib.dir}/junit.jar"/>
+    <junit fork="yes" haltonfailure="true" dir="${basedir}" maxmemory="256M" showoutput="true" timeout="180000">
+      <classpath>
+        <pathelement location="${jruby.instrumented.classes.dir}" />
+        <path refid="build.classpath"/>
+        <pathelement path="${java.class.path}"/>
+        <pathelement path="${lib.dir}/jruby.jar"/>
+        <pathelement location="${test.classes.dir}"/>
+        <pathelement path="${test.dir}/requireTest.jar"/>
+        <pathelement location="${test.dir}"/>
+      </classpath>
+      <sysproperty key="java.awt.headless" value="true"/>
+      <sysproperty key="jruby.base" value="${basedir}"/>
+      <sysproperty key="jruby.home" value="${basedir}"/>
+      <sysproperty key="jruby.lib" value="${lib.dir}"/>
+      <sysproperty key="jruby.jit.enabled" value="true"/>
+      <sysproperty key="jruby.jit.threshold" value="0"/>
+      <sysproperty key="jruby.reflection" value="true"/>
       <sysproperty key="emma.coverage.out.file" value="${test.results.dir}/coverage.emma" />
       <sysproperty key="emma.coverage.out.merge" value="true" />
       
