Fix for JRUBY-1123, add ISO-8859 encoding to javac task for platforms with different encodings.
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@4682 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -118,7 +118,7 @@
   </target>
 
   <target name="compile-jruby" depends="compile.tasks, check-for-optional-packages">
-    <javac destdir="${jruby.classes.dir}" debug="true" source="${javac.version}" deprecation="true">
+    <javac destdir="${jruby.classes.dir}" debug="true" source="${javac.version}" deprecation="true" encoding="ISO-8859-1">
        <classpath refid="build.classpath"/>
        <src path="${src.dir}"/>
        <patternset refid="java.src.pattern"/>
