Fix maven build by including all fixture jars in test with a wildcard
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@4711 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/pom.xml
+++ b/pom.xml
@@ -153,8 +153,7 @@
               <include>test/**/*.txt</include>
               <include>test/*index</include>
               <include>test/**/*.yml</include>
-              <include>test/RubyInitTest.jar</include>
-              <include>test/requireTarget.jar</include>
+              <include>test/*.jar</include>
             </includes>
           </testResource>
           <testResource>
