--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,19 @@
       <url>dav:https://dav.codehaus.org/jruby/info</url>
     </site>
   </distributionManagement>
+  <repositories>
+    <repository>
+      <id>codehaus</id>
+      <name>Codehaus Repository</name>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <url>http://repository.codehaus.org</url>
+    </repository>
+  </repositories>
   <developers>
     <developer>
       <id>headius</id>
