--- a/default.build.properties
+++ b/default.build.properties
@@ -3,6 +3,7 @@
 src.dir=src
 test.dir=test
 lib.dir=lib
+dist.dir=dist
 build.dir=build
 classes.dir=${build.dir}/classes
 jruby.classes.dir=${classes.dir}/jruby
