--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,12 @@
               <include>**/*.rb</include>
             </includes>
           </resource>
+          <resource>
+            <directory>${project.basedir}/../../lib/ruby/site_ruby/1.8</directory>
+            <includes>
+              <include>builtin/**/*.rb</include>
+            </includes>
+          </resource>
         </resources>
         <testResources>
           <testResource>
