Move of Java support stuff to a loose directory for JRUBY-1473. No :nodoc: done yet, we'll get to that before 1.1 final.
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@4812 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -99,6 +99,11 @@
             <include name="**/*.rb"/>
         </fileset>
     </copy>
+    <copy todir="${jruby.classes.dir}/builtin">
+        <fileset dir="${lib.dir}/ruby/site_ruby/1.8/builtin">
+            <include name="**/*.rb"/>
+        </fileset>
+    </copy>
     
     <tstamp>
         <format property="build.date" pattern="yyyy-MM-dd"/>
