JRUBY-1473: pom fixes on branch - fix a couple of other tests that were failing w/ mvn on   the branch also
git-svn-id: http://svn.codehaus.org/jruby/branches/jruby-1_0@4816 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -418,7 +418,7 @@ test/externals/rubinius/spec/parser"/></antcall>
   
   <target name="run-junit-interpreted" description="runs junit tests">
     <taskdef name="junit" classname="org.apache.tools.ant.taskdefs.optional.junit.JUnitTask" classpath="${lib.dir}/junit.jar"/>
-    <junit fork="yes" haltonfailure="true" dir="${basedir}" maxmemory="384M" showoutput="true">
+    <junit fork="yes" forkMode="once" haltonfailure="true" dir="${basedir}" maxmemory="384M" showoutput="true">
       <classpath>
         <pathelement location="${jruby.instrumented.classes.dir}" />
         <path refid="build.classpath"/>
@@ -435,7 +435,7 @@ test/externals/rubinius/spec/parser"/></antcall>
       <sysproperty key="jruby.jit.enabled" value="false"/>
       <sysproperty key="emma.coverage.out.file" value="${test.results.dir}/coverage.emma" />
       <sysproperty key="emma.coverage.out.merge" value="true" />
-    	
+
       <jvmarg value="-ea"/>
 
       <formatter type="xml"/>
@@ -451,7 +451,7 @@ test/externals/rubinius/spec/parser"/></antcall>
   
   <target name="run-junit-compiled" description="runs junit tests">
     <taskdef name="junit" classname="org.apache.tools.ant.taskdefs.optional.junit.JUnitTask" classpath="${lib.dir}/junit.jar"/>
-    <junit fork="yes" haltonfailure="true" dir="${basedir}" maxmemory="384M" showoutput="true">
+    <junit fork="yes" forkMode="once" haltonfailure="true" dir="${basedir}" maxmemory="384M" showoutput="true">
       <classpath>
         <pathelement location="${jruby.instrumented.classes.dir}" />
         <path refid="build.classpath"/>
