--- a/maven/jruby-complete/pom.xml
+++ b/maven/jruby-complete/pom.xml
@@ -206,6 +206,7 @@
                     <path refid="maven.plugin.classpath"/>
                     <pathelement location="${project.basedir}/../../test/requireTest.jar"/>
                   </classpath>
+                  <jvmarg value="-ea"/>
                   <formatter type="plain"/>
                   <formatter type="xml"/>
                   <formatter type="brief" usefile="false"/>
